external-crates/move/crates/move-compiler/tests/move_check/parser/invalid_call_lhs_value.move
module 0x42::M {
    fun foo() {
        5();
        5(0, 1);
    }
}
